--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -177,3 +177,39 @@ table.selectable tr:hover {
   font-size: 40px !important;
   padding-left: 0px; 
 }
+.flex_wrapper{
+  flex-flow: row wrap;
+  
+  /* Then we define how is distributed the remaining space */
+  justify-content: space-around;
+}
+
+.big_stat_title{
+  font-size: 55px;
+  margin-bottom:0px;
+}
+.big_stat_subtitle{
+  font-size: 15px;
+  margin-top:0px;
+}
+
+.medium_stat_title{
+  font-size:34px;
+  margin:0px;
+}
+.medium_stat_subtitle{
+  margin:0px;
+  font-size:13px;
+}
+
+.college_info_section_header{
+  color:#1A85D6 !important;
+  margin-bottom:5px;
+}
+
+.college_info{
+  text-align:center;
+}
+.stat_box{
+  text-align: center;
+}
