--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -90,9 +90,14 @@
       </div>
     </div>
     <div class="ten wide column">
-      <object data="/student/profile/view_transcript/{{ user.student_profile.id }}" type="application/pdf" width="100%" >
-        <a href="/student/profile/view_transcript/{{ user.student_profile.id }}">test.pdf</a>
+      <!-- {{filename}} -->
+      <!-- {% if filename %} -->
+      <object data="{{ url_for('student.send_file', file_name=filename) }}" type="application/pdf" width="100%" height="100%" >
+        <a href="{{ url_for('student.send_file', file_name=filename) }}">test.pdf</a>
+        
       </object>
+      
+      <!-- {% endif %} -->
       <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="plus icon"></i> Add Transcript
       </a>
