--- a/app/templates/main/college_profile.html
+++ b/app/templates/main/college_profile.html
@@ -12,6 +12,7 @@
     </div>
 {% endmacro %}
 
+
 {% macro create_link_box(url, description, extra_classes=none, icon_class=none)%}
     <div class="column">
         <div class="ui segment college_link {{extra_classes}}" onclick="window.open('{{ url }}', '_blank')"> 
@@ -23,8 +24,22 @@
     </div>
 {% endmacro %}
 
+
+
 <div class="ui stackable grid container" style="margin-top:12px; margin-bottom:64px">
     <div class="twelve wide computer sixteen wide mobile centered column">
+
+        <div class="ui raised secondary green segment college_info">
+            <h1 style="margin-bottom:15px;" class="ui header college_info_section_header">Useful Links</h1>
+            <div class="ui three column doubling stackable grid container stretched flex_wrapper">
+                {{ create_link_box(website_url, 'School Website', 'uni_web', 'university') }}
+                {{ create_link_box(net_cost_url, 'Net Cost Calculator', 'uni_cost', 'dollar sign') }}
+                {{ create_link_box('https://collegescorecard.ed.gov/school/?'+college.scorecard_id|string, 'College Scorecard Profile', 'uni_scd', 'chart bar') }}
+            </div>
+        </div>
+
+
+
         <div class="ui raised secondary green segment college_info">
             <h1 class="ui header college_info_section_header">{{college.name}} at a Glance</h1>
             <p style="font-size:18px;margin-bottom:15px;">{{ college.description }} </p>
@@ -69,17 +84,77 @@
         </div>
 
 
-        <div class="ui raised secondary green segment college_info">
-            <h1 style="margin-bottom:15px;" class="ui header college_info_section_header">Useful Links</h1>
-            <div class="ui three column doubling stackable grid container stretched flex_wrapper">
-                {{ create_link_box(website_url, 'School Website', 'uni_web', 'university') }}
-                {{ create_link_box(net_cost_url, 'Net Cost Calculator', 'uni_cost', 'dollar sign') }}
-                {{ create_link_box('https://collegescorecard.ed.gov/school/?'+college.scorecard_id|string, 'College Scorecard Profile', 'uni_scd', 'chart bar') }}
-            </div>
-        </div>
-
         <div class="ui raised secondary green segment college_info"> 
             <h1 class="ui header college_info_section_header">Costs</h1>
+            
+            <div class="ui two column doubling stackable grid container stretched flex_wrapper">
+                <div class="column">
+                    {{create_medium_stat_box('$'+"{0:,.0f}".format(college.cost_of_attendance_in_state), 'Average Total Cost of Attendance')}}
+                
+                     <div class="ui two column doubling stackable grid container stretched flex_wrapper">
+                        <div class="column">
+                            {% if college.room_and_board != 0.0 %}
+                                {{create_medium_stat_box('$'+"{0:,.0f}".format(college.room_and_board), 'Room and Board')}}   
+                            {% endif %} 
+                        </div>
+                        <div class="column">
+                            {% if college.room_and_board != 0.0 %}
+                                {{create_medium_stat_box('$'+"{0:,.0f}".format(college.tuition_in_state), 'Tuition')}}   
+                            {% endif %} 
+                        </div>
+
+                    </div>
+                </div>
+                <div class="column">
+                    {% if college.net_price_0_30000 is not none %}
+                    <table class="ui celled padded table">
+                        <tr>
+                            <th>Family Income</th>
+                            <th style="margin-left:30px;">Net Price</th>
+                        </tr>
+                        <tr>
+                            <td> $0 - $30,000 </td>
+                            <td> ${{"{0:,.0f}".format(college.net_price_0_30000)}} </td>
+                        </tr>
+                        <tr>
+                            <td> $30,0001 - $48,000 </td>
+                            <td> ${{"{0:,.0f}".format(college.net_price_30001_48000)}} </td>
+                        </tr>
+                        <tr>
+                            <td> $48,001 - $75,000 </td>
+                            <td> ${{"{0:,.0f}".format(college.net_price_48001_75000)}} </td>
+                        </tr>
+                        <tr>
+                            <td> $48,001 - $75,000 </td>
+                            <td> ${{"{0:,.0f}".format(college.net_price_48001_75000)}} </td>
+                        </tr>
+                        <tr>
+                            <td> $75,001 - $110,000 </td>
+                            <td> ${{"{0:,.0f}".format(college.net_price_75001_110000)}} </td>
+                        </tr>
+                        <tr>
+                            <td> $110,001 + </td>
+                            <td> ${{"{0:,.0f}".format(college.net_price_110001_plus)}} </td>
+                        </tr>
+                    </table>
+                    {% endif %}
+                </div>
+
+            </div>
+
+            {% if college.tuition_in_state != 0.0 and college.tuition_out_of_state != 0.0 %} 
+                    <!-- <div class="column">
+                    <p><strong>Tuition</strong>:
+                        {% if college.tuition_in_state == college.tuition_out_of_state %} 
+                        ${{ "{0:,.0f}".format(college.tuition_in_state) }}
+                        {% else %}
+                        In-state ${{ "{0:,.0f}".format(college.tuition_in_state) }} --  Out-of-state  ${{ "{0:,.0f}".format(college.tuition_out_of_state)}}
+                        {% endif %} 
+                    </p>
+                    </div> -->
+            {% endif %} 
+            
+            
             {% if college.cost_of_attendance_in_state != 0.0 and college.cost_of_attendance_out_of_state != 0.0 %}
             <p><strong>Average Total Cost of Attendance</strong>:
                 {% if college.cost_of_attendance_in_state == college.cost_of_attendance_out_of_state %}
@@ -89,57 +164,8 @@
                 {% endif %}
             </p>
             {% endif %}
-        
-            {% if college.tuition_in_state != 0.0 and college.tuition_out_of_state != 0.0 %} 
-            <p><strong>Tuition</strong>:
-                {% if college.tuition_in_state == college.tuition_out_of_state %} 
-                ${{ "{0:,.0f}".format(college.tuition_in_state) }}
-                {% else %}
-                In-state ${{ "{0:,.0f}".format(college.tuition_in_state) }} --  Out-of-state  ${{ "{0:,.0f}".format(college.tuition_out_of_state)}}
-                {% endif %} 
-            </p>
-            {% endif %} 
+    
 
-            {% if college.room_and_board != 0.0 %}
-            <p><strong>Room and Board</strong>:
-                ${{"{0:,.0f}".format(college.room_and_board)}}
-            </p>
-            {% endif %} 
-
-
-            {% if college.net_price_0_30000 is not none %}
-             <table class="ui celled padded table">
-                 <tr>
-                    <th>Family Income</th>
-                    <th style="margin-left:30px;">Net Price</th>
-                </tr>
-                <tr>
-                    <td> $0 - $30,000 </td>
-                    <td> ${{"{0:,.0f}".format(college.net_price_0_30000)}} </td>
-                </tr>
-                <tr>
-                    <td> $30,0001 - $48,000 </td>
-                    <td> ${{"{0:,.0f}".format(college.net_price_30001_48000)}} </td>
-                </tr>
-                <tr>
-                    <td> $48,001 - $75,000 </td>
-                    <td> ${{"{0:,.0f}".format(college.net_price_48001_75000)}} </td>
-                </tr>
-                <tr>
-                    <td> $48,001 - $75,000 </td>
-                    <td> ${{"{0:,.0f}".format(college.net_price_48001_75000)}} </td>
-                </tr>
-                <tr>
-                    <td> $75,001 - $110,000 </td>
-                    <td> ${{"{0:,.0f}".format(college.net_price_75001_110000)}} </td>
-                </tr>
-                <tr>
-                    <td> $110,001 + </td>
-                    <td> ${{"{0:,.0f}".format(college.net_price_110001_plus)}} </td>
-                </tr>
-             </table>
-
-            {% endif %}
         </div>
 
         <div class="ui raised secondary green segment college_info">
