--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -90,14 +90,11 @@
       </div>
     </div>
     <div class="ten wide column">
-      <!-- {{filename}} -->
-      <!-- {% if filename %} -->
+      {% if filename %}
       <object data="{{ url_for('student.send_file', file_name=filename) }}" type="application/pdf" width="100%" height="100%" >
         <a href="{{ url_for('student.send_file', file_name=filename) }}">test.pdf</a>
-        
       </object>
-      
-      <!-- {% endif %} -->
+      {% endif %}
       <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="plus icon"></i> Add Transcript
       </a>
@@ -107,6 +104,10 @@
       <a class="ui right floated small red basic labeled icon button" href="{{ url_for('student.delete_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="ui edit icon"></i> Delete Transcript
       </a>
+      
+      <br />
+      <br />
+      <br />
     </div>
   </div>
 
