if else statements

--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -90,20 +90,21 @@
       </div>
     </div>
     <div class="ten wide column">
-      {% if filename %}
+      {% if filename != 'N/A' %}
       <object data="{{ url_for('student.send_file', file_name=filename) }}" type="application/pdf" width="100%" height="100%" >
         <a href="{{ url_for('student.send_file', file_name=filename) }}">test.pdf</a>
       </object>
-      {% endif %}
-      <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
-        <i class="plus icon"></i> Add Transcript
-      </a>
       <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.edit_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="ui edit icon"></i> Edit Transcript
       </a>
       <a class="ui right floated small red basic labeled icon button" href="{{ url_for('student.delete_transcript', student_profile_id=user.student_profile.id)}}">
         <i class="ui edit icon"></i> Delete Transcript
       </a>
+      {% else %}
+      <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
+          <i class="plus icon"></i> Add Transcript
+      </a>
+      {% endif %}
       
       <br />
       <br />
