new color palette and front page

--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -82,8 +82,10 @@
     {% else %}
         <div class="mobile tablet only row">
     {% endif %}
-            <div style="background-color:#2D9DDF;" class="ui fixed inverted main menu">
-             <a class="item" href="/">Next Generation Scholars</a>
+    
+            <!-- <div style="background-color:#2D9DDF;" class="ui fixed inverted main menu"> -->
+            <div style="background-color:#2AB088;" class="ui fixed inverted main menu">
+              <a class="item" href="/">Next Generation Scholars</a>
               <div class="right menu">
                   <a class="icon item" id="open-nav"><i class="sidebar icon"></i></a>
               </div>
@@ -118,8 +120,9 @@
         <div style="padding-bottom: 0px;" class="computer only row">
     {% else %}
       <div class="computer only row">
-    {% endif %}   
-        <div style="background-color:#2D9DDF;" class="ui fixed inverted main menu">
+    {% endif %}      
+      <div style="background-color:#2AB088;" class="ui fixed inverted main menu">
+      <!-- <div style="background-color:#2D9DDF;" class="ui fixed inverted main menu"> -->
           <div class="ui container">
             <a class="item" href="/">Next Generation Scholars</a>
             <div class="right menu">
