--- a/app/templates/macros/page_macros.html
+++ b/app/templates/macros/page_macros.html
@@ -4,7 +4,7 @@
     </div>
 
     {% if current_user.is_admin() or current_user.is_counselor() %}
-       <button style="margin-top:30px" class="ui green button start-edit">
+       <button style="margin-top:30px; background-color:#F5C75B" class="ui button start-edit">
         Add content to display here
        </button>
        <button style="margin-top:30px" class="ui primary button end-edit">
