--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -52,7 +52,7 @@
   <!-- DISPLAY ACADEMIC INFORMATION -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color:#2AB088;" class="ui horizontal divider">
         <h3>Academic Information</h3>
       </div>
     </div>
@@ -85,7 +85,7 @@
   <!-- UPLOAD TRANSCRIPT -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Transcript
       </div>
     </div>
@@ -115,7 +115,7 @@
   <!-- DISPLAY TEST SCORES -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #F5C75B;" class="ui horizontal divider">
         Test Scores
       </div>
       <table class="ui compact table">
