--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -30,13 +30,65 @@
 {% endmacro %}
 
 {% block content %}
+<!-- <img src="https://cdn.shopify.com/s/files/1/1482/0322/files/Merchandise_Shop_for_Homepage_of_website_35543d35-61a6-4c64-a8d6-533ab4ad3904_2048x.jpg?v=1488502359" width="100%"> -->
+<div class="ui inverted vertical masthead center aligned segment" style="background-image: url('../static/images/ngs_test.JPG'); background-size:100%; background-color:#564359; padding-top:12%; padding-bottom:12%; margin-top:-30px;">
+    <div class="ui container">
+
+    </div>
+    <div class="ui text container" >
+        <h1 class="ui inverted header">
+            Next Generation Scholars Portal
+        </h1>
+        <h2>The best way for students and counselors to communicate for the college application process</h2> <br />
+        {% if not current_user.is_authenticated %}
+            <a class="ui huge primary button" style="background-color:#FF4249" href="{{url_for('account.login')}}">
+                Get Started
+                <i class="right arrow icon"></i>
+            </a>
+
+        {% endif %}
+    </div>
+</div>
+
 <div class="ui stackable centered grid container" style="margin-top:12px; margin-bottom:64px">
     <div class="twelve wide computer sixteen wide mobile column">
-        <h1 class="ui dividing header">Welcome!</h1>
-        <div>Admitt-ed is a platform for counselors and students to track their progress through the college 
-            application process. Students can research and compare colleges they're interested in, update their
-            essay progress, and keep track of their scholarship information. Counselors can send out notifications
-            and assign tasks to their students, among other things. We wish you luck! 
+        <div class="row">
+            <h1 class="ui dividing header">Getting Started</h1>
+            <div class="ui three steps">
+                <a class="active step" href="{{ url_for('student.view_user_profile')}}">
+                  <i class="user icon"></i>
+                  <div class="content">
+                    <div class="title">Profile</div>
+                    <div class="description">Start filling out your profile!</div>
+                  </div>
+                </a>
+                <a class="step" href="{{ url_for('student.calendar')}}">
+                    <i class="calendar icon"></i>
+                    <div class="content">
+                        <div class="title">Calendar</div>
+                        <div class="description">Integrate your Google Calendar!</div>
+                    </div>
+                </a>
+                <a class="step" href="{{ url_for('student.dashboard')}}">
+                    <i class="tasks icon" ></i>
+                    <div class="content">
+                        <div class="title">Tasks</div>
+                        <div class="description">Start adding and completing tasks!</div>
+                    </div>
+                </a>
+              </div>
+        </div>
+    </div>
+    
+    <div class="twelve wide computer sixteen wide mobile column">
+        <h1 class="ui header">What This Is</h1>
+        <div>
+            <p>
+                Admitt-ed is a platform for counselors and students to track their progress through the college 
+                application process. Students can research and compare colleges they're interested in, update their
+                essay progress, and keep track of their scholarship information. Counselors can send out notifications
+                and assign tasks to their students, among other things. We wish you luck! 
+            </p> 
 
             {{ page.render_inline_editor(editable_html_obj, current_user) }} 
 
@@ -59,6 +111,8 @@
                 'Due on 3/2 -- Update your progress in your profile and tasks!') }}
         </div>
     </div>
+
+    
 
     <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
