--- a/app/templates/student/checklist.html
+++ b/app/templates/student/checklist.html
@@ -102,7 +102,7 @@
         {% endif %}
         <div class="stretched divided very relaxed row">
         	{{ render_checklist(checklist) }}
-            <button class="ui green button" id="add-checklist-item"><i class="plus icon" ></i>Add Item</button>
+            <button class="ui button" id="add-checklist-item" style="background-color:#FF4249; color:white"><i class="plus icon" ></i>Add Item</button>
             {{ completed_list(completed) }}
         </div>
     </div>
