--- a/app/templates/student/scholarships.html
+++ b/app/templates/student/scholarships.html
@@ -11,7 +11,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <button class="ui primary button" type="submit">Filter</button>
+            <button class="ui primary button" type="submit" style="background-color:#FF4249; color:white">Filter</button>
         </form>
         <h4 class="ui header">Search</h4>
         <div class="ui input focus">
