--- a/app/templates/student/index.html
+++ b/app/templates/student/index.html
@@ -52,7 +52,7 @@
                 {{ dashboard_option('View Calendar', 'student.calendar',
                                     description='View your personal and NGS calendar for upcoming events', icon='calendar icon') }}
             
-                {{ dashboard_option('Account Settings', 'student.tasks',
+                {{ dashboard_option('Account Settings', 'account.manage',
                                     description='Manage your account settings and change your login information', icon='settings icon') }}
             
                 {{ dashboard_option('View Profile', 'student.view_user_profile',
@@ -86,13 +86,13 @@
             </div> -->
             <h4 class="ui dividing header">Explore</h4>
             <div class="ui two column stackable grid">
-                {{ dashboard_option('Explore Colleges', 'student.tasks',
+                {{ dashboard_option('Explore Colleges', 'student.colleges',
                                     description='View different colleges to add to your wishlist', icon='university icon') }}
 
-                {{ dashboard_option('Explore Scholarships', 'student.tasks',
+                {{ dashboard_option('Explore Scholarships', 'student.scholarships',
                                     description='View different scholarships you can apply to', icon='money bill alternate outline icon') }}
 
-                {{ dashboard_option('View Resources', 'student.tasks',
+                {{ dashboard_option('View Resources', 'main.resources',
                                     description='Explore different resources for the college application process', icon='file alternate icon') }}
             </div>
         </div>
