changed routes that were main.resources to student.resources or counselor.resources

--- a/app/templates/student/index.html
+++ b/app/templates/student/index.html
@@ -92,7 +92,7 @@
                 {{ dashboard_option('Explore Scholarships', 'student.scholarships',
                                     description='View different scholarships you can apply to', icon='money bill alternate outline icon') }}
 
-                {{ dashboard_option('View Resources', 'main.resources',
+                {{ dashboard_option('View Resources', 'student.resources',
                                     description='Explore different resources for the college application process', icon='file alternate icon') }}
             </div>
         </div>
