--- a/app/templates/student/update_profile.html
+++ b/app/templates/student/update_profile.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
+{% import 'macros/form_macros.html' as f %}
 
 {% block content %}
 <div class="ui stackable centered grid container" style="margin-top:12px; margin-bottom:64px">
