--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -51,47 +51,89 @@
 </div>
 
 <div class="ui stackable centered grid container" style="margin-top:12px; margin-bottom:64px">
-    <div class="twelve wide computer sixteen wide mobile column">
-        <div class="row">
-            <h1 class="ui dividing header">Getting Started</h1>
-            <div class="ui three steps">
-                <a class="active step" href="{{ url_for('student.view_user_profile')}}">
-                  <i class="user icon"></i>
-                  <div class="content">
-                    <div class="title">Profile</div>
-                    <div class="description">Start filling out your profile!</div>
-                  </div>
-                </a>
-                <a class="step" href="{{ url_for('student.calendar')}}">
-                    <i class="calendar icon"></i>
-                    <div class="content">
-                        <div class="title">Calendar</div>
-                        <div class="description">Integrate your Google Calendar!</div>
-                    </div>
-                </a>
-                <a class="step" href="{{ url_for('student.index')}}">
-                    <i class="tasks icon" ></i>
-                    <div class="content">
-                        <div class="title">Tasks</div>
-                        <div class="description">Start adding and completing tasks!</div>
-                    </div>
-                </a>
-              </div>
+    <div class="ui vertical segment">
+        <div class="ui three column stackable center aligned grid container">
+            <div class="column">
+                <img
+                    class="ui centered small circular image"
+                    src="/static/images/ngs_jovani.jpg"
+                />
+                <h1 class="ui header">Administrators</h1>
+                <p>
+                    Administrators can invite and manage users, as well as add colleges and scholarships. Administrators can 
+                    assign default tasks to students, view and manage student profiles, evaluate progress 
+                    on important college application steps, such as recommendation letters and supplemental essays, as well 
+                    as access and update the calendar. Counselors also have the option to add new colleges and scholarships 
+                    for students to explore.
+
+                    {{ page.render_inline_editor(editable_html_obj, current_user) }} 
+                </p>
+            </div>
+            <div class="column">
+                <img
+                  class="ui centered small circular image"
+                  src="/static/images/ngs_sally.jpg"
+                  
+                />
+                <h1 class="ui header">Counselors</h1>
+                <p>
+                  Counselors can assign default tasks to students, view and manage student profiles, evaluate progress 
+                  on important college application steps, such as recommendation letters and supplemental essays, as well 
+                  as access and update the calendar. Counselors also have the option to add new colleges and scholarships 
+                  for students to explore, in addition to recommending colleges and scholarships to certain students.
+
+                  {{ page.render_inline_editor(editable_html_obj, current_user) }} 
+                </p>
+            </div>
+            <div class="column">
+                <img
+                  class="ui centered small circular image"
+                  src="/static/images/user-avatar.jpg"
+                />
+                <h1 class="ui header">Students</h1>
+                <p>
+                  Students can create a profile with contact information, grades and test scores, extracurriculars,
+                  colleges and majors of interest, recommendation letter and supplemental essay progress, as well 
+                  as college acceptances and scholarship awards. Students can also keep track of their tasks through
+                  the checklist and calendar, as well as explore potential colleges and scholarships.
+
+                  {{ page.render_inline_editor(editable_html_obj, current_user) }} 
+                </p>
+            </div>
         </div>
     </div>
+
     <div class="twelve wide computer sixteen wide mobile column">
-        <h1 class="ui dividing header">Welcome!</h1>
-        <div>Admitt-ed is a platform for counselors and students to track their progress through the college 
-            application process. Students can research and compare colleges they're interested in, update their
-            essay progress, and keep track of their scholarship information. Counselors can send out notifications
-            and assign tasks to their students, among other things. We wish you luck! 
-
-            {{ page.render_inline_editor(editable_html_obj, current_user) }} 
-
+        <div class="ui centered vertical segment">
+            <div class="ui stackable grid">
+                <div class="ten wide column" style="margin-top:5%;">
+                    <h1 class="ui header">
+                        Made by Hack4Impact + NGS
+                        <div class="ui sub header">UPenn, URichmond, Cornell, UIUC.</div>
+                    </h1>
+                    <p>
+                        Hack4Impact is a 501 (c)(3) nonprofit organization founded at the University of 
+                        Pennsylvania in Philadelphia, with chapters at various colleges across the United States. 
+                        They collaborate with nonprofits and other socially responsible organizations to develop 
+                        software that meets important social and humanitarian needs.
+                    </p>
+                    <a class="ui huge primary button" style="background-color:#FF4249" href="http://hack4impact.org">
+                        Get More Information
+                        <i class="right arrow icon"></i>
+                    </a>
+                </div>
+                <div class="six wide right aligned column">
+                    <img
+                        class="ui image"
+                        src="/static/images/h4i.png"
+                    />
+                </div>
+            </div>
         </div>
     </div>
     
-    <div class="twelve wide computer sixteen wide mobile column">
+    
+    <!-- <div class="twelve wide computer sixteen wide mobile column">
         <h1 class="ui dividing header">Messages</h1> <br /> 
         <div class="ui two column centered grid">
             {{ message_option('FAFSA', 'https://studentaid.ed.gov/sa/fafsa',
@@ -106,23 +148,23 @@
                 'https://user-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_1440,w_720,f_auto,q_auto/1320747/CA_Dream_Act_logo_lgh0xl.jpg', 
                 'Due on 3/2 -- Update your progress in your profile and tasks!') }}
         </div>
-    </div>
+    </div> -->
 
     <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
-            <h1 class="ui dividing header">Calendar</h1>
+            <h1 class="ui dividing header">Upcoming Events</h1>
             <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;";>
                 <iframe src="https://calendar.google.com/calendar/embed?src=ngs4impact%40gmail.com&ctz=America%2FLos_Angeles" style="position: absolute; top:0; left: 0; width: 100%; height: 100%; border:none;"></iframe>
             </div>
         </div>
     </div>
 
-    <div class="twelve wide computer sixteen wide mobile column">
+    <!-- <div class="twelve wide computer sixteen wide mobile column">
         <div class="row">
             <h1 class="ui dividing header">Survey</h1>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUGSDIw98c_E45nkGF_dYQ4gtp7vKwv1LpQxA7YcESA0j-eg/viewform?embedded=true" style="border: 0" width="100%" height="650" frameborder="0"></iframe>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <script src="{{ url_for('static', filename='ckeditor/ckeditor.js') }}"></script>
