--- a/app/templates/main/scholarship_profile.html
+++ b/app/templates/main/scholarship_profile.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %} {% block content %}
 <div class="ui stackable grid container" style="margin-top:12px; margin-bottom:64px">
     <div class="twelve wide computer sixteen wide mobile centered column">
-        <b><a style="color: #1A85D6;" class = "ui header large" href={{scholarship.link}}>{{ scholarship.name }}</a></b>
+        <b><a style="color: #2AB088;" class = "ui header large" href={{scholarship.link}}>{{ scholarship.name }}</a></b>
         <div class="ui stackable grid container" style="margin-top:12px; margin-bottom:64px">
             <div class="twelve wide computer sixteen wide mobile column">
                 <div class="ui raised secondary green segment">
