--- a/app/templates/student/student_profile.html
+++ b/app/templates/student/student_profile.html
@@ -52,7 +52,7 @@
   <!-- DISPLAY ACADEMIC INFORMATION -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color:#2AB088;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         <h3>Academic Information</h3>
       </div>
     </div>
@@ -82,40 +82,10 @@
     </div>
   </div>
 
-  <!-- UPLOAD TRANSCRIPT -->
-  <div class="row">
-    <div class="twelve wide column">
-      <div style="color: #2AB088;" class="ui horizontal divider">
-        Transcript
-      </div>
-    </div>
-    <div class="ten wide column">
-      {% if filename != 'N/A' %}
-      <object data="{{ url_for('student.send_file', file_name=filename) }}" type="application/pdf" width="100%" height="100%" >
-        <a href="{{ url_for('student.send_file', file_name=filename) }}">test.pdf</a>
-      </object>
-      <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.edit_transcript', student_profile_id=user.student_profile.id)}}">
-        <i class="ui edit icon"></i> Edit Transcript
-      </a>
-      <a class="ui right floated small red basic labeled icon button" href="{{ url_for('student.delete_transcript', student_profile_id=user.student_profile.id)}}">
-        <i class="ui edit icon"></i> Delete Transcript
-      </a>
-      {% else %}
-      <a class="ui right floated small green basic labeled icon button" href="{{ url_for('student.add_transcript', student_profile_id=user.student_profile.id)}}">
-          <i class="plus icon"></i> Add Transcript
-      </a>
-      {% endif %}
-      
-      <br />
-      <br />
-      <br />
-    </div>
-  </div>
-
   <!-- DISPLAY TEST SCORES -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #F5C75B;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Test Scores
       </div>
       <table class="ui compact table">
@@ -164,7 +134,7 @@
   <div class="row">
     <!-- DISPLAY MAJORS -->
     <div class="six wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Majors of Interest
       </div>
       <table class="ui compact table">
@@ -202,7 +172,7 @@
     </div>
     <!-- DISPLAY COLLEGES -->
     <div class="six wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         Colleges of Interest
       </div>
       <table class="ui compact table">
@@ -251,10 +221,10 @@
   <!-- DISPLAY ESSAYS -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         <h3>College Application Information</h3>
       </div>
-      <div style="color: #1A85D6;" class="ui horizontal divider">Essays</div>
+      <div style="color: #2AB088;" class="ui horizontal divider">Essays</div>
       <table class="ui compact table">
         <thead class="full-width">
           <th>Essay</th>
@@ -340,7 +310,7 @@
   <!-- DISPLAY RECOMMENDATION LETTERS -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">Recommendation Letters</div>
+      <div style="color: #2AB088;" class="ui horizontal divider">Recommendation Letters</div>
       <table class="ui compact table">
         <thead class="full-width">
           <th>Name</th>
@@ -395,10 +365,10 @@
   <!-- DISPLAY Acceptances -->
   <div class="row">
     <div class="twelve wide column">
-      <div style="color: #1A85D6;" class="ui horizontal divider">
+      <div style="color: #2AB088;" class="ui horizontal divider">
         <h3>Acceptances</h3>
       </div>
-      <div style="color: #1A85D6;" class="ui horizontal divider">Colleges</div>      
+      <div style="color: #2AB088;" class="ui horizontal divider">Colleges</div>      
       <table class="ui compact table">
         <thead class="full-width">
           <th>Cost of Attendance</th>
@@ -460,7 +430,7 @@
 <!-- Display Scholarships Awarded -->
   <div class="row">
       <div class="twelve wide column" style="padding-bottom: 50px;">
-      <div style="color: #1A85D6;" class="ui horizontal divider">Scholarships</div>
+      <div style="color: #2AB088;" class="ui horizontal divider">Scholarships</div>
         <table class="ui compact table">
           <thead class="full-width">
             <th>Name</th>
@@ -630,21 +600,6 @@
         }
       });
     });
-
-    // View Transcript
-    // $('.delete-acceptance-button').click(function() {
-    //   var url = '/student/profile/acceptance/delete/' + $(this).data('id');
-    //   $(this).parent().parent().parent().remove();
-    //   $.ajax({
-    //     url: url,
-    //     type: 'POST',
-    //     success: function(data) {
-    //       if (data.success !== "True") {
-    //         alert("Sorry there was an error, please try again.");
-    //       }
-    //     }
-    //   });
-    // });
   });
 </script>
 {% endblock %}
